# exp-wasmtime-axum

./: Cargo.toml  simplest.wasm  wrk.lua
payloads/simplest/: Cargo.toml
payloads/simplest/src/: main.rs
src/: file.rs  main.rs  wasm.rs
